<resources>
    <string name="app_name">Lilol</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="week_rotation">Current free champion list on this week</string>
    <string name="week_rotation_two">To new players (until level %1$s)</string>
    <string name="disclaimer_rotation">disclaimer: currently, Riot considers a player as a newbie until level %1$s</string>
    <string name="error_request">Something went wrong! 🫠\nCheck your internet connection or try later!</string>
    <string name="new_player_range"><![CDATA[0 < level ≤ %1$d (%2$d champions)]]></string>
    <string name="normal_player_range"><![CDATA[ level %1$d+ (%2$d champions)]]></string>
    <string name="related_champions">Related champions</string>
    <string name="view_more">view more</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="portuguese">Portuguese</string>
    <string name="language_array_title">Language</string>
    <string name="change_language">change language to %1$s</string>
    <string name="change_language_confirm">When switching languages, the application will close. Go back to see the changes.</string>
    <string name="yes">OK</string>
    <string name="no">forgot it</string>
    <string name="free_champions">Free-week</string>
    <string name="champion">Champion</string>
    <string name="all_champions">Champions</string>
    <string name="ordering_by">Sorted by: %1$s</string>
    <string name="search_hint">Search champion</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="patch">Patch %1$s</string>
    <string name="home_free_week_tip">Checkout current free week champions</string>
    <string name="home_all_champions_tip">Go to a list with all available champions in the current patch</string>
    <string name="lore">Lore</string>
    <string name="tools_lore" translatable="false">Weaponized to operate outside the boundaries of the law, Camille is the Principal Intelligencer of Clan Ferros—an elegant and elite agent who ensures the Piltover machine and its Zaunite underbelly runs smoothly. Adaptable and precise, she views sloppy technique as an embarrassment that must be put to order. With a mind as sharp as the blades she bears, Camille\'s pursuit of superiority through hextech body augmentation has left many to wonder if she is now more machine than woman.</string>
    <string name="free_week">Free Week</string>
    <string name="new_rotation_notification_title">New rotation available!</string>
    <string name="new_rotation_notification_desc">Check out the chosen champions of the week!</string>
    <string name="playing_with_champion">Playing with %1$s</string>
    <string name="playing_against_champion">Playing against %1$s</string>
    <string name="no_available_tips_for_playing_with_champion">No available tips to play with this champion yet.</string>
    <string name="no_available_tips_for_playing_against_champion">No available tips to play against this champion yet.</string>
    <string name="cd_toggle_icon_champion_detail">Open/close Lore</string>
    <string name="skills">Skills</string>
    <string name="skins_label">Skins</string>
    <string name="available_skins_label">Available Skins</string>
    <string name="spell_cooldown_label">Cooldown: %1$s</string>
    <string name="spell_cost_label">Cost: %1$s</string>
    <string name="spell_range_label">Range: %1$s</string>
    <string name="champions_empty_state">No champions match your search or filters yet.</string>
    <string name="champions_empty_state_with_query">No results for "%1$s". Try a different name or clear filters.</string>
    <string name="champions_error_message">We couldn’t load champions. Check your connection and try again.</string>
    <string name="pagination_label">Page %1$d of %2$d</string>
    <string name="ask_notification_permission">"If you want to receive new rotations in the future, please, allow notifications permission. "</string>
    <string name="ok">OK</string>
    <string name="not_now">NOT NOW</string>
</resources>
