<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rotation.view.fragment.HomeFragment">

    <TextView
        android:id="@+id/home_text_patch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="16dp"
        android:text="@string/patch"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        app:dividerThickness="2dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/home_text_patch" />


    <LinearLayout
        android:id="@+id/home_linear_free_week_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="@id/home_text_patch"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider">

        <TextView
            android:id="@+id/home_free_week_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_champions"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_free_week_tip" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_linear_free_week_wrapper" />

    <LinearLayout
        android:id="@+id/home_linear_all_champions_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="@id/home_text_patch"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2">

        <TextView
            android:id="@+id/home_all_champions_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_champions"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_all_champions_tip" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider3"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_linear_all_champions_wrapper" />



</androidx.constraintlayout.widget.ConstraintLayout>