<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/allChampionsFragment">


    <fragment
        android:id="@+id/championDetailFragment"
        android:name="com.machado001.lilol.rotation.view.fragment.ChampionDetailsFragment"
        tools:layout="@layout/fragment_champion_detail">
        <argument
            android:name="championId"
            app:argType="string" />
        <argument
            android:name="championName"
            app:argType="string" />
        <action
            android:id="@+id/action_championDetailFragment_self"
            app:destination="@id/championDetailFragment" />
        <argument
            android:name="championVersion"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/rotationFragment"
        android:name="com.machado001.lilol.rotation.view.fragment.RotationFragment"
        android:label="@string/free_champions"
        tools:layout="@layout/fragment_rotation">
        <action
            android:id="@+id/action_rotationFragment_to_championDetailFragment"
            app:destination="@id/championDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.machado001.lilol.rotation.view.fragment.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/allChampionsFragment"
        android:name="com.machado001.lilol.rotation.view.fragment.AllChampionsFragment"
        android:label="@string/all_champions"
        tools:layout="@layout/fragment_all_champions">
        <action
            android:id="@+id/action_allChampionsFragment_to_championDetailFragment"
            app:destination="@id/championDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.machado001.lilol.rotation.view.fragment.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_rotationFragment"
            app:destination="@id/rotationFragment" />
        <action
            android:id="@+id/action_homeFragment_to_allChampionsFragment"
            app:destination="@id/allChampionsFragment" />
    </fragment>
    <action
        android:id="@+id/action_global_homeFragment"
        app:destination="@id/homeFragment" />
</navigation>
