<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rotation.view.RotationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_rotation_title"
            style="@style/Theme.Lilol.TextViewBase"
            android:paddingBottom="20dp"
            android:text="@string/week_rotation"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/new_player_range"
            style="@style/Theme.Lilol.TextViewBase"
            android:paddingBottom="0dp"
            android:text="@string/new_player_range"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/rv_rotation_new_players"
            app:layout_constraintStart_toStartOf="@+id/rv_rotation_new_players"
            app:layout_constraintTop_toBottomOf="@id/txt_rotation_title"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_rotation_new_players"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:backgroundTintMode="add"
            android:clipChildren="true"
            android:clipToPadding="false"
            app:barrierDirection="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_player_range"
            tools:itemCount="10"
            tools:listitem="@layout/item_rotation_rv" />

        <TextView
            android:id="@+id/normal_player_range"
            style="@style/Theme.Lilol.TextViewBase"
            android:paddingBottom="0dp"
            android:text="@string/normal_player_range"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/rv_rotation_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_rotation_new_players"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_rotation_main"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:barrierDirection="end"
            app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/normal_player_range"
            tools:itemCount="10"
            tools:listitem="@layout/item_rotation_rv" />


        <ProgressBar
            android:id="@+id/progress_rotation"
            style="@style/Theme.Lilol.TextViewBase"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_error_request"
            style="@style/Theme.Lilol.TextViewBase"
            android:text="@string/error_request"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
