<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_details_champion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_wrapBehaviorInParent="included">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/details_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7">

                <ImageView
                    android:id="@+id/image_details_champion_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:text="@string/hello_blank_fragment"
                    app:layout_constraintDimensionRatio="16:9"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/camille_11" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/text_details_champion_name"
                    style="@style/Theme.Lilol.TextViewBase.ChampionDetail"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="10"
                    android:textColor="@color/md_theme_dark_onSurface"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    tools:text="Camille" />

                <TextView
                    android:id="@+id/text_details_champion_title"
                    style="@style/Theme.Lilol.TextViewBase.ChampionDetail"
                    android:layout_marginBottom="8dp"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="10"
                    android:textColor="@color/md_theme_dark_onSurface"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    tools:text="the Steel Shadow" />
            </LinearLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="2" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_details_champion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:context=".rotation.view.fragment.ChampionDetailsFragment">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/lore_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:animateLayoutChanges="true"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_card_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:padding="8dp">

                <TextView
                    android:id="@+id/text_details_champion_lore_title"
                    style="@style/Theme.Lilol.TextViewBase.ChampionDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/lore"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="0dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    app:layout_constraintBottom_toBottomOf="@+id/text_details_champion_lore_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_details_champion_lore_title"
                    app:tint="?attr/colorOnBackground" />

                <TextView
                    android:id="@+id/text_details_champion_lore"
                    style="@style/Theme.Lilol.TextViewBase.ChampionDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/text_details_champion_lore_title"
                    tools:text="@string/tools_lore"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.divider.MaterialDivider
            style="@style/Theme.Lilol.TextViewBase.ChampionDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:dividerColor="?attr/colorOnBackground"
            app:layout_constraintBottom_toTopOf="@id/text_details_champion_related_champions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lore_card" />

        <TextView
            android:id="@+id/text_details_champion_related_champions"
            style="@style/Theme.Lilol.TextViewBase.ChampionDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/related_champions"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lore_card" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_related_champions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clipChildren="false"
            android:clipToPadding="true"
            android:elevation="5dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_details_champion_related_champions"
            app:layout_constraintTop_toBottomOf="@id/text_details_champion_related_champions"
            app:spanCount="3"
            tools:itemCount="10"
            tools:listitem="@layout/item_rotation_rv"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

